--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langchain>=0.2.7
 langchain-community>=0.2.7
 langchain-core>=0.2.7
 langchain-google-genai>=1.0.5
+langchain-huggingface>=0.0.3
 google-generativeai>=0.7.2
 sentence-transformers>=3.0.1
 faiss-cpu>=1.8.0
